rust/app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@eip2930_simple_transfer.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/eip2930_simple_transfer.json
---
[
    "Transfer": "LUX 0.081985529216486895",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Fee(GWEI)": "9.64",
]
